# cml-api

./: .gitignore  Dockerfile  data.csv  models.py  pyproject.toml  pyrightconfig.json  requirements.txt  test.sh
cml_api/: main.py  models.py
cml_api/database/: database.py
cml_api/models/: auth_models.py  sql-models.py
fastapi_gateway/: main.py  test.py
static/: index.html
