[tool.poetry]
name = "fastapi-gateway"
version = "0.1.0"
description = ""
authors = ["Sean McLeaish <smcleaish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { version = "^0.112.1", extras = ["all"] }
python-multipart = "^0.0.9"
pyjwt = "^2.9.0"
uvicorn = "^0.30.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
