[tool.poetry]
name = "cml-api"
version = "0.1.0"
description = ""
authors = ["Sean McLeaish <smcleaish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
polars = "^1.8.2"
uvicorn = "^0.31.0"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
